@@ -1,3 +1,7 @@
+24-02-2007 Qball <Qball@Sarine.nl>
+	* src/playlist3-find3-browser: Add support for server side search
+	* configure.ac:	Depend on libmpd 0.13.1
+
 23-02-2007 Qball <Qball@Sarine.nl>
 	* src/playlist3-metadata-browser.c: Fix memory leak
 	* src/playlist3.c:	Remove trailing ;
